--- a/Algo-Prim/Algo-Prim.vcxproj.filters
+++ b/Algo-Prim/Algo-Prim.vcxproj.filters
@@ -27,7 +27,10 @@
     <ClInclude Include="OurList.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Vertex.h">
+    <ClInclude Include="VertexL.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexM.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,7 +41,10 @@
     <ClCompile Include="pch.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="Vertex.cpp">
+    <ClCompile Include="VertexL.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="VertexM.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
