--- a/PrimL/PrimL.vcxproj.filters
+++ b/PrimL/PrimL.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main-Projet-AA.cpp">
+    <ClCompile Include="PrimL.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
